--- a/index.qmd
+++ b/index.qmd
@@ -3,7 +3,7 @@ title: "About Me"
 about:
   id: me
   template: broadside
-  image: img/Me.jpg
+  image: img/Profile_2024.jpg
 ---
 
 ::: {#me}
@@ -11,7 +11,7 @@ about:
 
 Thank you for visiting my website. This page was created for Assignment #4 for DACSS 604. 
 
-I am currently a graduate student in the Data Analytics and Computational Social Science Program, also known as DACSS, at the University of Massachusetts- Amherst. I received by Bachelor's Degree in Psychology, with a minor in Anthropology, from Mount Holyoke College. For over a decade, I have been working for state agencies, and I am currently employed full-time as an employee for the Commonwealth of Massachusetts. My academic background has given me a foundation in understanding human behavior, which I am now complementing with data analytics skills to improve decision-making processes.
+I am currently a graduate student in the Data Analytics and Computational Social Science Program, also known as DACSS, at the University of Massachusetts- Amherst. I received my Bachelor's Degree in Psychology, with a minor in Anthropology, from Mount Holyoke College. For over a decade, I have been working for state agencies, and I am currently employed full-time as an employee for the Commonwealth of Massachusetts. My academic background has given me a foundation in understanding human behavior, which I am now complementing with data analytics skills to improve decision-making processes.
 :::
 
 Thanks for checking out my web site!
